--- a/codecrafters_redis.opam
+++ b/codecrafters_redis.opam
@@ -9,6 +9,7 @@ homepage: "https://codecrafters.io"
 bug-reports: "https://github.com/codecrafters-io/build-your-own-redis/issues"
 depends: [
   "dune" {>= "3.16"}
+  "fmt"
   "odoc" {with-doc}
 ]
 build: [
