handle concurrent clients

--- a/codecrafters_redis.opam
+++ b/codecrafters_redis.opam
@@ -10,6 +10,8 @@ bug-reports: "https://github.com/codecrafters-io/build-your-own-redis/issues"
 depends: [
   "dune" {>= "3.16"}
   "fmt"
+  "lwt"
+  "logs"
   "odoc" {with-doc}
 ]
 build: [
