--- a/dune
+++ b/dune
@@ -2,4 +2,6 @@
 
 (executable
  (name main)
- (libraries fmt lwt.unix logs.lwt unix))
+ (libraries fmt lwt.unix logs.lwt str)
+ (preprocess
+  (pps ppx_deriving.show)))
