--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,5 @@
-(include_subdirs unqualified)
-
-(executable
- (name main)
+(library
+ (name redis)
  (libraries fmt lwt.unix logs.lwt str)
  (preprocess
   (pps ppx_deriving.show)))
