--- a/bin/dune
+++ b/bin/dune
@@ -2,4 +2,4 @@
  (name main)
  (libraries fmt lwt.unix logs.lwt str redis)
  (preprocess
-  (pps ppx_deriving.show)))
+  (pps ppx_deriving.show lwt_ppx)))
