--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,15 +3,7 @@
 name: CI
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: push
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -35,7 +27,7 @@ jobs:
         run: opam exec -- opam install . --deps-only --with-test
 
       - name: "Install ocamlformat"
-        run: opam exec -- opam install ocamlformat
+        run: opam exec -- opam install ocamlformat.0.26.2
 
       - name: "Install redis"
         run: |
