feat: parse and load RDB file (#3)
* parse metadata and eof section

* fix: read byte stream instead

* support special format encoding

* complete parser

* parse RDB file and load state

* add test for reading from RDB file

* implement glob module

* add KEYS command

* add conf-linux-libc-dev dependency

* use nanoseconds to keep track of expiry

* check if server is active after executing redis

--- a/codecrafters_redis.opam
+++ b/codecrafters_redis.opam
@@ -16,6 +16,9 @@ depends: [
   "lwt_ppx"
   "logs"
   "ppx_deriving"
+  "ppx_jane"
+  "re"
+  "conf-linux-libc-dev"
   "odoc" {with-doc}
 ]
 build: [
