--- a/test/dune
+++ b/test/dune
@@ -1,2 +1,2 @@
 (cram
- (deps run_redis.sh kill_redis.sh %{bin:redis_ocaml_server}))
+ (deps run_redis.sh kill_redis.sh data/empty.rdb %{bin:redis_ocaml_server}))
