--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,14 @@
 (library
  (name redis)
- (libraries core core_unix core_unix.sys_unix fmt lwt.unix logs.lwt re str)
+ (libraries
+  core
+  core_unix
+  core_unix.sys_unix
+  fmt
+  lwt.unix
+  logs.lwt
+  re
+  str
+  uuidm)
  (preprocess
   (pps ppx_deriving.show lwt_ppx ppx_let)))
